# blender-asset-library

./: .gitignore  CMakeLists.txt  README  README.md
share/: blender_assets.cats.txt  preview.blend
share/doc/: compositing-common.txt  normalize.css  preview.txt  procedural-common.txt  shading-common.txt  stylesheet.css
share/doc/materials/: accent-strobelight-bulb.txt  accent-strobelight-spot.txt  checker-backdrop.html  checker-backdrop.txt  checker-backdrop.xhtml  fill-panel-area.txt  fill-panel-bulbs.txt  generic-wireframe.html  generic-wireframe.txt  generic-wireframe.xhtml  modifier-wireframe.html  modifier-wireframe.txt  modifier-wireframe.xhtml  rim-panel-area.txt  rim-panel-bulbs.txt  root-wireframe.html  root-wireframe.txt  root-wireframe.xhtml  salad-moon-globe.txt  simple-alloy.html  simple-alloy.txt  simple-alloy.xhtml  simple-dielectric.html  simple-dielectric.txt  simple-dielectric.xhtml  simple-diffuser.html  simple-diffuser.txt  simple-diffuser.xhtml  simple-glass.html  simple-glass.txt  simple-glass.xhtml  simple-mirror.html  simple-mirror.txt  simple-mirror.xhtml  simple-plastic.html  simple-plastic.txt  simple-plastic.xhtml  sky-panel-area.txt  sky-panel-bulbs.txt  x-axis-wireframe.html  (+17 more)
share/doc/project-files/: compositing-common.txt  preview.txt  procedural-common.txt  shading-common.txt
share/doc/worlds/: mount-everest-peak.html  mount-everest-peak.txt  mount-everest-peak.xhtml  purgatory-horizon.html  purgatory-horizon.txt  purgatory-horizon.xhtml  studio-room.html  studio-room.txt  studio-room.xhtml
share/nodes/: compositing-common.blend  procedural-common.blend  shading-common.blend
